Bug 1641371 - Align the tracking protection info element r=Honza
Differential Revision: https://phabricator.services.mozilla.com/D77160

--- a/devtools/client/netmonitor/src/assets/styles/HeadersPanel.css
+++ b/devtools/client/netmonitor/src/assets/styles/HeadersPanel.css
@@ -186,7 +186,7 @@
 
 .network-monitor .tracking-protection {
   color: var(--theme-icon-dimmed-color);
-  margin-left: 47px;
+  max-width: 200px;
 }
 
 .network-monitor .tracking-protection .learn-more-link:not(:hover)::before {
